# eag-v2-s7

./: .gitignore  ARCHITECTURE_SLIDE.md  PRESENTATION.md  README.md  TECH_STACK_SLIDE.md  TESTING_GUIDE.md  pyproject.toml  server.py  test_transcript.py  test_youtube.py
agent/: __init__.py  action.py  ai_agent.py  decision.py  memory.py  models.py  perception.py  prompts.py
chrome-extension/: content.js  manifest.json  popup.html  popup.js
server_mcp/: __init__.py  mcp_server.py  models.py  tools_algebra.py  tools_arithmetic.py  tools_geometry.py  tools_logical.py  tools_statistics.py
session-7/: README.md  embeddings_compare_ollama.py  faiss_medium_ollama.py  faiss_simple_ollama.py  pyproject.toml  you.py  youtube.py
tools/: tools_youtube.py
